# doi

./: .gitignore  README.md  build.gradle  opencadc.gradle
.github/workflows/: gradle.yml
citation/: Dockerfile  README.md  build.gradle
citation/helm/: Chart.yaml  values.yaml
doi/: Dockerfile  README.md  VERSION  build.gradle  devReadme.txt  doi.properties  intTest.properties
rafts/: .env.example  .gitignore  README.md  deploy.sh  docker-compose.traefik.yml  docker-compose.yml
rafts/api/validator/: .dockerignore  .gitignore  Dockerfile  README.md  VERSION  pyproject.toml  test_main.http
rafts/api/validator/ades/: __init__.py
rafts/api/validator/app/: config.py  main.py
rafts/api/validator/app/routes/: health.py  model_context.py  mpc_validation.py  psv_validation.py  xml_validation.py
rafts/api/validator/app/utils/: conversion.py  paths.py  validation.py
rafts/api/validator/tests/: conftest.py  test_health.py  test_model_context.py  test_mpc_validation.py  test_psv_validation.py  test_xml_security.py  test_xml_validation.py
rafts/docker-swarm-deployment/: ENV_VARS_GUIDE.md  build_ades.md  build_rafts.md  deploy.sh  docker_run_ades.md  docker_run_rafts.md  rafts-stack.yml
rafts/frontend/: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .prettierignore  Dockerfile  Dockerfile.can  Dockerfile.dev  README.md  VERSION  canfar-init.sh  canfar-startup.sh  docker-compose.dev.yml  docker-compose.prod.yml  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
swagger/: swagger-openapi
(+482 files in other folders)
